--- a/client/src/components/Settings/Settings.css
+++ b/client/src/components/Settings/Settings.css
@@ -54,7 +54,11 @@
 }
 
 .form__message--error {
-    color: #cd201f;
+    color: var(--red);
+}
+
+.form__message--left-pad {
+    padding-left: 0.85rem;
 }
 
 .interface__title {
